# bot-nexus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  requests.http
.github/workflows/: ci.yml  deploy.yml
migrations/: 20260218205335_create_users_table.up.sql  20260218210045_create_notes_table.sql  20260221205943_create_users_table.sql  20260221205951_create_bots_table.sql  20260221205956_create_user_bots_table.sql  20260223114004_create_todo_lists_table.up.sql  20260226120000_create_tasks_table.up.sql
src/: app.rs  errors.rs  lib.rs  main.rs  state.rs
src/dto/: auth.rs  lists.rs  mod.rs  tasks.rs
src/handlers/: auth.rs  bots.rs  health.rs  lists.rs  mod.rs  tasks.rs
src/middleware/: auth.rs
src/models/: mod.rs  task.rs  todo_list.rs  user.rs
src/repo/: list_repo.rs  mod.rs  task_repo.rs  user_repo.rs
src/routes/: auth.rs  bots.rs  health.rs  lists.rs  mod.rs  tasks.rs
src/services/: auth.rs  lists.rs  mod.rs  tasks.rs
tests/: auth.rs  health.rs  lists.rs  middleware.rs  middleware_auth.rs  tasks.rs
tests/common/: mod.rs
