[package]
name = "rust-notest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.4"
axum = "0.7"
dotenvy = "0.15"
jsonwebtoken = "9"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
